--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lemonchiffon;
+  background-color: #f3c98b;
 }
 
 .lighten {
@@ -7,8 +7,63 @@ body {
 }
 
 .person {
-  display: block;
-  background-color: yellowgreen;
+  display:block;
   padding: 2px;
   margin: 5px;
+  font-family: 'PT Sans', sans-serif;
+  border-left: 6px solid #f56960;
+}
+
+section.selection{
+  font-weight: bold;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 15px;
+  background: #f56960;
+}
+h1{
+  font-family: 'PT Sans', sans-serif;
+  text-align: center;
+  color: #c46d5e;
+  font-size: 80px;
+}
+.container{
+  position: relative;
+  text-align: left;
+  color: #f56960;
+  text-shadow: 2px 2px 5px black;
+}
+.bottom-left{
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 60px;
+  font-weight: bold;
+  text-shadow: 2px 2px 5px black;
+}
+.box{
+  background-color: #f56960;
+  font-family: 'PT Sans', sans-serif;
+  padding: 5px;
+  text-align: center;
+  font-size: 20px;
+}
+select{
+  padding: 10px 8px 10px 14px;
+  font-family: 'PT Sans', sans-serif;
+  background: white;
+  border: 1px solid #ccc;
+  width: 40%;
+  position: relative;
+  z-index: 10;
+  font-size: 1em;
+  line-height: 2;
+  overflow: hidden;
+  background-position: 80% center;
+}
+.names{
+  background: #f56960;
+  padding: 5px;
+  text-align: center;
+
 }
